modules/security/ingress/config/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: storefront
spec:
  hosts:
  - "storefront.${INGRESSIP}.sslip.io"
  gateways:
  - storefront
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
